Sync all content

--- a/content/resources/res-11-550s21.md
+++ b/content/resources/res-11-550s21.md
@@ -4,10 +4,12 @@ description: ''
 file: /courses/res-11-550-leveraging-urban-mobility-disruptions-to-create-better-cities-spring-2021/6e0c2fad07ac3e7aff1e335672976bfe_RES-11-550s21.jpg
 file_size: 40570
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: 'Electric rental scooters stand on a sidewalk in Washington, DC. (Photo
-    courtesy of {{% resource_link "14c92124-d162-4e60-9916-e52c931a0885" "Adam Fagen"
-    %}} on Flickr. License: CC BY-NC-SA.)'
+    courtesy of [Adam Fagen](https://www.flickr.com/photos/afagen/39687106833) on
+    Flickr. License: CC BY-NC-SA.)'
   credit: 'Photo courtesy of Adam Fagen on Flickr. License: CC BY-NC-SA'
   image-alt: Three identical scooters with "$1 to start" printed on them
 learning_resource_types: []
