--- a/content/resources/res-11-550s21-th.md
+++ b/content/resources/res-11-550s21-th.md
@@ -4,10 +4,12 @@ description: ''
 file: /courses/res-11-550-leveraging-urban-mobility-disruptions-to-create-better-cities-spring-2021/d5c4a97e27eb75e1321687178b6a510c_RES-11-550s21-th.jpg
 file_size: 6038
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: 'Electric rental scooters stand on a sidewalk in Washington, DC. (Photo
-    courtesy of {{% resource_link "14c92124-d162-4e60-9916-e52c931a0885" "Adam Fagen"
-    %}} on Flickr. License: CC BY-NC-SA.)'
+    courtesy of [Adam Fagen](https://www.flickr.com/photos/afagen/39687106833) on
+    Flickr. License: CC BY-NC-SA.)'
   credit: ''
   image-alt: Three identical scooters with "$1 to start" printed on them
 learning_resource_types: []
